Allow 'upnp:createClass' attributes retrieval

Existing gupnp_didl_lite_container_get_create_classes (...)) API doesn't
allow to retrieve the "IncludeDerived" and friendlyName attributes of the
"upnp:createClass" elements, the returned result is a Glist of UTF8 string
 representing the class name.

To enable the retrieval of these attributes, this change adds:

- A new GUPnPDIDLLiteCreateClasses GObject with the "upnp:createClass"
 properties (content, includeDerived, friendly name) and their related
 Getter/Setter APIs.

- A new GUPnPDIDLLiteContainer GObject method to get all its
"upnp:createClass" elements as a GList of GUPnPDIDLLiteCreateClasses
 objects:

GList * gupnp_didl_lite_container_get_create_classes_full(
					GUPnPDIDLLiteContainer *container);

https://bugzilla.gnome.org/show_bug.cgi?id=684297